--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
+    "@emotion/core": "^10.0.21",
+    "@emotion/native": "^10.0.14",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -17,6 +19,7 @@
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
     "apollo-link-retry": "^2.2.15",
+    "apollo-utilities": "^1.3.2",
     "expo": "^35.0.0",
     "graphql": "^14.5.8",
     "graphql-request": "^1.8.2",
@@ -38,7 +41,15 @@
   "devDependencies": {
     "@babel/core": "^7.6.3",
     "@types/react": "^16.9.5",
-    "babel-preset-expo": "^7.0.0"
+    "babel-eslint": "^10.0.3",
+    "babel-preset-expo": "^7.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   },
   "private": true
 }
